--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
    <application
         android:label="ticket_scanner"
         android:icon="@mipmap/ic_launcher">
-        <activity
+       <uses-permission android:name="android.permission.VIBRATE"/>
+       <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
