--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
-        android:icon="@mipmap/ic_launcher"
-        android:label="ticket_scanner">
+        android:icon="@mipmap/launcher_icon"
+        android:label="BYF Tickets">
 
         <activity
             android:name=".MainActivity"
