--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,14 @@ dependencies:
   qr_code_scanner: ^0.5.2
   http:
   vibration: ^1.7.4-nullsafety.0
+  flutter_launcher_icons: ^0.9.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
