--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
     <application
+        android:name="io.flutter.app.FlutterApplication"
         android:icon="@mipmap/launcher_icon"
         android:label="BYF Tickets">
 
