--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  qr_code_scanner: ^0.5.2
+#  qr_code_scanner: ^0.5.2
+  scan:
   http:
   vibration: ^1.7.4-nullsafety.0
   flutter_launcher_icons: ^0.9.0
